df-sg.tf
#securitygroup
resource "aws_security_group" "web-sg" {
  security_group_name = var.sg
  description = "Security group for user-service with custom ports open within VPC, you can modify"
  vpc_id      = var.vpc
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  // connectivity to ubuntu mirrors is required to run `apt-get update` and `apt-get install apache2`
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "web-address" {
  value = "${aws_instance.web.public_dns}:8080"
}
